2002-07-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* orangedress.shp, bluedress.shp: new paperdoll art by sbx

2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc,flags.h,actors.h:  Figured out that 'zombie' is
	referred to as flag 30 in usecode functions.

	* schedule.cc (Street_maintenance_schedule): Don't follow Avatar
	if Avatar is under Usecode control.
	* intrinsics.cc:  update_last_created() no longer checks for a spot.
	* sigame.cc:  Added a patch to move Neyobi on top of the pelt.

2002-07-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/greentop.shp: new paperdoll art. Thanks sbx!
	* usecode/ucxt/Makefile.am: fixed --disable-tools
	* configure.in: install gnome things to $(datadir)
	(instead of $(GNOMEDATADIR)). This allows non-root installs.
	* data/Makefile.am: don't install estudio data when not building that

2002-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: fixed up offsets; fixed NULL shape error

2002-07-14  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Fixed bug that was corrupting
	moongates in the sphere-generator, and added fix for old games.

2002-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* chunks.cc: worked around compiler bug (gcc 2.96-110) for is_blocked

2002-07-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: removed --enable-usecode-debugger (it's 1.1.x only)
	* exult.cc: undo double click change. (it broke gumps)
	* ucinternal.cc: disable usecode debugging a bit more aggressively

2002-07-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: allow (but ignore) large changes to loop arrays

2002-07-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: don't count dragging for double clicks

2002-07-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>